--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <!-- favicon desde public/ -->
-    <link rel="icon" href="%BASE_URL%favicon.ico" />
+     <link rel="icon" href="%BASE_URL%vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Club App</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- En dev carga /src/main.jsx, en build Vite lo sustituye por el bundle correcto -->
+    <!-- Vite sustituye %BASE_URL% por "/" en dev y por "/club-app/" en build -->
     <script type="module" src="%BASE_URL%src/main.jsx"></script>
   </body>
 </html>
